<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="jatem.com.jatem.activities.MainActivity">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/ivUserPhoto"
        android:layout_width="77dp"
        android:layout_height="72dp"
        app:srcCompat="@drawable/tw__ic_logo_default"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintTop_creator="1"
        android:layout_marginStart="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="15dp"
        tools:layout_editor_absoluteY="424dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/describe_idea"
        android:textColor="@color/mainColor"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textColor="@color/mainColor"
        android:text="@string/be_specific"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <AutoCompleteTextView
        android:id="@+id/etIdea"
        android:layout_width="0dp"
        android:layout_height="148dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/edit_text_style"
        android:gravity="top"
        android:hint="@string/hint_tip"
        android:inputType="textMultiLine"
        android:lines="4"
        android:maxLength="140"
        android:paddingBottom="18sp"
        android:paddingLeft="10sp"
        android:paddingRight="10sp"
        android:paddingTop="10sp"
        android:textColor="@color/mainColor"
        android:textColorHint="@color/hintColor"
        app:layout_constraintBottom_toTopOf="@+id/btnJaTem"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.777"
        tools:layout_constraintRight_creator="1" />

    <TextView
        android:id="@+id/tvCountDown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="16dp"
        android:textColor="@color/count_color"
        android:text="140"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etIdea" />

    <Button
        android:id="@+id/btnJaTem"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:background="@drawable/button"
        android:textColor="#FFFFFE"
        android:textAllCaps="false"
        android:text="@string/hashtag_jatem"
        android:enabled="false"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="149dp" />

    <TextView
        android:id="@+id/tvLogoff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:textSize="11sp"
        android:text="@string/logoff_text"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintLeft_toRightOf="@+id/ivUserPhoto"
        android:layout_marginLeft="24dp" />

    <TextView
        android:id="@+id/tvMinCharacters"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/min_char"
        android:textColor="@color/count_color"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/etIdea" />

</android.support.constraint.ConstraintLayout>
